--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletone",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Walletone payment module (walletone.com)",
   "main": "./index.js",
   "author": {
@@ -15,13 +15,23 @@
     "payment"
   ],
   "license": "MIT",
-  "dependencies": {
-    "iconv-lite": "*",
-    "lodash": "*"
+  "scripts": {
+    "test": "mocha"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/ortexx/walletone"
+  "dependencies": {
+    "iconv-lite": "^0.4.15",
+    "lodash": "^3.0.0"
+  },
+  "devDependencies": {
+    "body-parser": "^1.16.0",
+    "chai": "^3.5.0",
+    "express": "^4.14.1",
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ortexx/walletone"
   },
   "engines": {
     "node": ">=5.0.0"
