--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletone",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Walletone payment module (walletone.com)",
   "main": "./index.js",
   "author": {
@@ -27,7 +27,8 @@
     "chai": "^3.5.0",
     "express": "^4.14.1",
     "mocha": "^3.2.0",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "express-busboy": "^6.0.1"
   },
   "repository": {
     "type": "git",
