--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletone",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Walletone payment module (walletone.com)",
   "main": "./index.js",
   "author": {
@@ -19,16 +19,16 @@
     "test": "mocha"
   },
   "dependencies": {
-    "iconv-lite": "^0.4.15",
-    "lodash": "^3.0.0"
+    "iconv-lite": "^0.4.24",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.19.0",
     "chai": "^3.5.0",
-    "express": "^4.14.1",
-    "mocha": "^3.2.0",
-    "supertest": "^2.0.1",
-    "express-busboy": "^6.0.1"
+    "express": "^4.17.1",
+    "express-busboy": "^6.0.1",
+    "mocha": "^6.2.1",
+    "supertest": "^4.0.0"
   },
   "repository": {
     "type": "git",
